--- a/src/components/tooltip/tooltip.less
+++ b/src/components/tooltip/tooltip.less
@@ -42,6 +42,10 @@
 
 }
 
+.js .tooltip {
+    display: none;
+}
+
 // modifiers
 // =========
 
